implements methods patch and queryByName search customers